# xplore-path

./: FullXPath31Grammar.g4  LICENSE  README.md  XPath31Grammar.g4  XPath31Grammar.interp  XPath31GrammarLexer.interp  XPath31GrammarLexer.py  XPath31GrammarLexer.tokens  XPath31GrammarListener.py  XPath31GrammarParser.py  XPath31GrammarVisitor.py  path.py  pyproject.toml  unittest.cfg  xpath_evaluator.py
.github/workflows/: run-tests.yml
playground/: goslim_mouse.json  test.csv  test.html  test.json  test.sqlite  test.xml  test.yaml
src/xplore_path/: XplorPathGrammarLexer.py  XplorePathGrammar.g4  XplorePathGrammar.interp  XplorePathGrammar.tokens  XplorePathGrammarLexer.interp  XplorePathGrammarLexer.py  XplorePathGrammarLexer.tokens  XplorePathGrammarListener.py  XplorePathGrammarParser.py  XplorePathGrammarVisitor.py  collection.py  collection_utils.py  core_type_utils.py  core_types.py  entity.py  evaluator.py  fallback_mode.py  invocable.py  matcher.py  node.py  null.py  path.py  raise_parse_error_listener.py
tests/xplore_path_tests/: benchmark.py  collection_utils_test.py  entity_test.py  evaluator_add_test.py  evaluator_all_test.py  evaluator_any_test.py  evaluator_bool_and_test.py  evaluator_bool_not_test.py  evaluator_bool_or_test.py  evaluator_concatenate_test.py  evaluator_create_constants_and_lists_test.py  evaluator_divide_test.py  evaluator_equality_test.py  evaluator_equality_with_matchers_test.py  evaluator_filter_test.py  (+40 more)
xplore_path/: XPath31Grammar.g4  XPath31Grammar.interp  XPath31Grammar.tokens  XPath31GrammarLexer.interp  XPath31GrammarLexer.py  XPath31GrammarLexer.tokens  XPath31GrammarListener.py  XPath31GrammarParser.py  XPath31GrammarVisitor.py  XplorePathGrammar.g4  XplorePathGrammar.interp  XplorePathGrammar.tokens  XplorePathGrammarLexer.interp  XplorePathGrammarLexer.py  XplorePathGrammarLexer.tokens  XplorePathGrammarListener.py  XplorePathGrammarParser.py  XplorePathGrammarVisitor.py  coercions.py  evaluator.py  evaluator_add_test.py  evaluator_all_test.py  evaluator_any_test.py  evaluator_bool_and_test.py  evaluator_bool_or_test.py  evaluator_concatenate_test.py  evaluator_constants_add_test.py  evaluator_constants_any_test.py  evaluator_constants_bool_and_test.py  evaluator_constants_bool_or_test.py  evaluator_constants_concatenate_test.py  evaluator_constants_create_test.py  evaluator_constants_equality_test.py  evaluator_constants_greater_than_or_equal_test.py  evaluator_constants_greater_than_test.py  evaluator_constants_less_than_or_equal_test.py  evaluator_constants_less_than_test.py  evaluator_constants_modulo_test.py  evaluator_constants_multiply_test.py  evaluator_constants_non_equality_test.py  (+81 more)
(+224 files in other folders)
