[project]
name = "xplore_path"
version = "0.1.0"
description = ""
authors = [{ name = "offbynull", email = "offbynull@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime>=4.13.2,<5"
]

[tool.poetry]
packages = [
    { include = "xplore_path", from = "src" }
]

[tool.poetry.group.dev.dependencies]
antlr4-tools = "^0.2.1"

[tool.poetry.group.test.dependencies]

[project.optional-dependencies]
data_repl= [
    "prompt-toolkit>=3.0.48,<4",
    "pandas>=2.2.3,<3",
    "openpyxl>=3.1.5,<4",
    "pypdf2>=3.0.1,<4",
    "pyyaml>=6.0.2,<7",
    "python-docx>=1.1.2,<2",
    "bs4>=0.0.2,<1"
]

[project.scripts]
xplore-path = "xplore_path.repl.repl:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
